0.2.2
- fixed a critical issue regarding caching, whereby 
a cached block would raise an error when called within a
cache-refresh operation that was initiated after the 
initiating template had completed rendering.

0.2.1
- fixed bug where 'output_encoding' parameter would prevent 
render_unicode() from returning a unicode object.
- bumped magic number, which forces template recompile for 
this version (fixes incompatible compile symbols from 0.1 
series).
- added a few docs for cache options, specifically those that
help with memcached.

0.2.0
- Speed improvements (as though we needed them, but people
  contributed and there you go):

  - added "bytestring passthru" mode, via
    `disable_unicode=True` argument passed to Template or
    TemplateLookup. All unicode-awareness and filtering is
    turned off, and template modules are generated with
    the appropriate magic encoding comment. In this mode,
    template expressions can only receive raw bytestrings
    or Unicode objects which represent straight ASCII, and
    render_unicode() may not be used if multibyte
    characters are present. When enabled, speed
    improvement around 10-20%. [ticket:77] (courtesy
    anonymous guest)

  - inlined the "write" function of Context into a local
    template variable. This affords a 12-30% speedup in
    template render time. (idea courtesy same anonymous
    guest) [ticket:76]
  
- New Features, API changes: 
 
  - added "attr" accessor to namespaces. Returns
    attributes configured as module level attributes, i.e.
    within <%! %> sections.  [ticket:62] i.e.:
    
    # somefile.html
    <%! 
        foo = 27
    %>
    
    # some other template
    <%namespace name="myns" file="somefile.html"/>
    ${myns.attr.foo}

    The slight backwards incompatibility here is, you
    can't have namespace defs named "attr" since the
    "attr" descriptor will occlude it.
    
  - cache_key argument can now render arguments passed